Rollback splashscreen fix on iPhone still not great

--- a/src/www/styles/index.scss
+++ b/src/www/styles/index.scss
@@ -40,7 +40,6 @@ html {
   body {
     line-height: 1.3em;
     margin: 0px !important;
-    background-color: var(--primary-color-background);
   }
 
   #app {
